# DEFER

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-lock.txt
defer/: __init__.py
defer_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: azure_foundry_eval.md  failure_recovery.md  hardware_profile.md  limitations_and_design_choices.md  paper_design_choices_and_limitations.md  reproducibility.md  runtime_cost.md
scripts/: __init__.py  analyze_human_eval.py  audit_success_pairs.py  build_preference_pairs.py  build_success_preference_pairs.py  build_training_datasets.py  check_paper_integrity.py  compute_theory_comparison.py  create_generalization_splits.py  diagnose_corrupt_success.py  evaluate_metrics.py  generate_seed_tasks.py  generate_variants.py  prepare_human_eval.py  reproduce.py  run_adversarial_eval.py  run_api_eval.py  run_api_sota_matrix.py  run_baselines.py  run_checkpoint_eval.py  run_checkpoint_seed_sweep.py  run_final_data_collection.sh  run_paper_data_collection.py  run_seed_sweep.py  train_dpo.py  train_sft.py
tests/: test_adversarial_scenarios.py  test_api_eval_specs.py  test_api_policy_transport.py  test_check_paper_integrity.py  test_check_paper_integrity_api_sota.py  test_checkpoint_eval_policy_staging.py  test_checkpoint_eval_run_meta_on_fallback_failure.py  test_checkpoint_seed_sweep_templates.py  test_cluster_bootstrap.py  test_contamination_guard.py  test_contract_postconditions.py  test_correlated_verifier.py  test_corrupt_success_semantics.py  test_dcs_reversible_action.py  test_deferral_calibration.py  test_episode_seed_variation.py  test_event_order_correctness.py  test_extended_domains.py  test_failure_taxonomy.py  test_fallback_rate_enforcement.py  test_fallback_rate_surfacing.py  test_final_data_collection_claim_source_selection.py  test_human_eval.py  test_metric_edge_cases.py  test_metric_rerun_invariance.py  test_model_policy_parsing.py  test_multiple_comparisons.py  test_no_match_clusters.py  test_paraphrase_expansion.py  test_parser_determinism.py  test_policy_invariant_rng.py  (+24 more)
(+58 files in other folders)
